# CompilerProject

./: .gitignore
Compiler/: .gitignore  CMakeLists.txt  build.sh  compile_commands.json  main.c  output_program  test.code  testApp  testFile  tests
Compiler/Utility_old/Utility/: LRItem.hpp  grammar.hpp  rule.hpp  symbol.hpp  token.hpp
Compiler/headers/ProductionRule/: produtionRule.hpp
Compiler/include/: symbols.hpp
Compiler/include/Expression/: binaryExpression.hpp  expression.hpp  expressionType.hpp  terminalExpression.hpp
Compiler/include/Expressions/: ReturnExpression.hpp  baseExpression.hpp  binaryExpression.hpp  blockExpression.hpp  conditionalExpression.hpp  expression.hpp  functionCall.hpp  functionDeclaration.hpp  ifExpression.hpp  integer.hpp  programExpression.hpp  referenceAssignmentExpression.hpp  terminalExpression.hpp  variableExpression.hpp
Compiler/include/LRItems/: lritems.hpp
Compiler/include/Lexer/: lexer.hpp
Compiler/include/Parser/: parser.hpp
Compiler/include/ProductionRule/: productionRule.hpp
Compiler/include/Token/: token.hpp
Compiler/include/Utility/: Expression.hpp  grammar.hpp  rule.hpp  token.hpp
Compiler/include/Visitor/: evaluatorVisitor.hpp  expressionVisitor.hpp
Compiler/include/Visitors/: baseVisitor.hpp  borrowChecker.hpp  llvmVisitor.hpp  typeCheckingVisitor.hpp
Compiler/src/: main.cpp
Compiler/src/Expressions/: binaryExpression.cpp  integer.cpp  terminalExpression.cpp  variableExpression.cpp
Compiler/src/Lexer/: lexer.cpp  lexer.l  parser.cpp  parser.hpp  parser.y
Compiler/src/Parser/: parser.cpp
Compiler/src/Utility/: Expression.cpp  grammar.cpp
Compiler/src/Visitor/: evaluateVisitor.cpp
Compiler/src/Visitors/: borrowChecker.cpp  llvmVisitor.cpp  typeCheckingVisitor.cpp
Compiler/test/BorrowChecker/: BorrowCheckerTest.cpp
Compiler/test/BorrowChecker/tests/: assignment1.code  functionCallWithReferenceArgumentAfterOwnershipChange.code  functionCallWithReferenceArgumentBeforeOwnershipChange.code  functionCorrectlyTransferOwnershipOut.code  immutableReferenceAssignment.code  immutableReferenceAssignment3.code  mutableAndImmutableReferenceAssignment.code  mutableReferenceAssignment.code  mutableReferenceAssignment2.code  (+9 more)
Compiler/test/Expressions/: binaryExpressionTest.cpp  integerTest.cpp  terminalExpressionTest.cpp
Compiler/test/Lexer/: lexerTest.cpp  lexerTest.hpp
Compiler/test/Parser/: parserTest.cpp
Compiler/test/Token/: tokenTest.cpp
Compiler/test/Utility/: grammarTest.cpp  tokenTest.cpp
Compiler/test/Visitor/: evaluatorVisitorTest.cpp
(+78 files in other folders)
